fix: update base href in index.html for correct routing and adjust artifact path in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./dist/book"
+          path: "./dist/book/browser"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
