feat: implement book model, home page component, and IDB service for book management

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run linter
         run: bun run lint
       - name: Build static content
-        run: bun run build
+        run: bun run build --base-href "/book/"
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
