--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "format": "oxfmt ."
   },
   "dependencies": {
+    "@angular/cdk": "21.0.5",
     "@angular/common": "^21.0.6",
     "@angular/compiler": "^21.0.6",
     "@angular/core": "^21.0.6",
     "@angular/forms": "^21.0.6",
+    "@angular/material": "21.0.5",
     "@angular/platform-browser": "^21.0.6",
     "@angular/router": "^21.0.6",
     "foliate-js": "github:johnfactotum/foliate-js",
