refactor: reorganize import statements across multiple files for improved readability and consistency

--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -2,11 +2,12 @@
   "$schema": "./node_modules/oxfmt/configuration_schema.json",
   "overrides": [
     {
-      "files": "*.html",
+      "files": ["*.html"],
       "options": {
         "parser": "angular"
       }
     }
   ],
-  "ignorePatterns": []
+  "ignorePatterns": [],
+  "experimentalSortImports": {}
 }
